Indicate the basic catalog of SON problems

--- a/基于强化学习的无线网络自组织性研究/SON.bib
+++ b/基于强化学习的无线网络自组织性研究/SON.bib
@@ -588,10 +588,66 @@
 }
 
 @Article{Alliance2008,
-  author        = {Alliance, NGMN and others},
-  title         = {NGMN recommendation on SON and O\&M requirements},
-  journal       = {Next Generation Mobile Networks, White paper, December},
-  year          = {2008},
+  author  = {Alliance, NGMN and others},
+  title   = {NGMN recommendation on SON and O\&M requirements},
+  journal = {Next Generation Mobile Networks, White paper, December},
+  year    = {2008},
+}
+
+@TechReport{3gpp.36.839,
+  author      = {3rd Generation Partnership Project},
+  title       = {{Evolved Universal Terrestrial Radio Access; Mobility enhancements in heterogeneous networks}},
+  institution = {3GPP},
+  year        = {2012},
+  type        = {Tech. Rep.},
+  number      = {36.839},
+}
+
+@TechReport{3gpp.32.541,
+  author      = {3rd Generation Partnership Project},
+  title       = {{Technical Specification Group Services and System Aspects; Telecommunications Management; Self-Organizing Networks (SON); Self-Healing Concepts and Requirements}},
+  institution = {3GPP},
+  year        = {2012},
+  type        = {Tech. Rep.},
+  number      = {32.541},
+}
+
+@TechReport{3gpp.36.902,
+  author      = {3rd Generation Partnership Project},
+  title       = {{LTE; evolved universal terrestrial radio access network (E-UTRAN); self-configuring and self-optimizing network (SON) use cases and solutions}},
+  institution = {3GPP},
+  year        = {2010},
+  type        = {Tech. Rep.},
+  number      = {36.902},
+}
+
+@TechReport{3gpp.32.500,
+  author      = {3rd Generation Partnership Project},
+  title       = {{Technical Specification Group Services and System Aspects; Telecommunication Management; Self-Organizing Networks (SON); Concepts and Requirements}},
+  institution = {3GPP},
+  year        = {2010},
+  type        = {Tech. Rep.},
+  number      = {32.500},
+}
+
+@Article{Hu2010,
+  author        = {Hu, Honglin and Zhang, Jian and Zheng, Xiaoying and Yang, Yang and Wu, Ping},
+  title         = {Self-configuration and self-optimization for LTE networks},
+  journal       = {IEEE Communications Magazine},
+  year          = {2010},
+  volume        = {48},
+  number        = {2},
+  __markedentry = {[Administrator:]},
+  publisher     = {IEEE},
+}
+
+@InProceedings{Chen2015,
+  author        = {Chen, David and Schuler, Joseph and Wainio, Pekka and Salmelin, Juha},
+  title         = {5G self-optimizing wireless mesh backhaul},
+  booktitle     = {Computer Communications Workshops (INFOCOM WKSHPS), 2015 IEEE Conference on},
+  year          = {2015},
+  pages         = {23--24},
+  organization  = {IEEE},
   __markedentry = {[Administrator:6]},
 }
 
