--- a/基于强化学习的无线网络自组织性研究/基于强化学习的无线网络自组织性研究.tex
+++ b/基于强化学习的无线网络自组织性研究/基于强化学习的无线网络自组织性研究.tex
@@ -94,18 +94,54 @@ LTE的部署对SON的推进，涉及到若干问题及其解决方案。
 5G 将采用超密集的异构网络节点部署方式，在宏站的覆盖范围内部署大量的低功率节点，并且存在大量的未经规划的节点，因此，在网络拓扑、干扰场景、负载分布、部署方式、移动性方面都将表现出与现有无线网络明显不同之处，网络节点的自动配置和维护将成为运营商面临的重要挑战。比如，邻区关系由于低功率节点的随机部署远比现有系统复杂，需要发展面向随机部署、超密集网络场景的新的自动邻区关系技术，以支持网络节点即插即用的自配置功能；由于可能存在多个主要的干扰源，以及由于用户移动性、低功率节点的随机开启何关闭等导致的干扰源的随机、大范围变化，使得干扰协调技术的优化更为困难；由于业务等随时间和空间的动态变化，使得网络部署应该适应这些动态变化，因此，应该对网络动态部署技术进行优化，如小站的动态与半静态开启和关闭的优化、无线资源调配的优化 ；为了保证移动平滑性，必须通过双连接等形式避免频繁切换和对切换目标小区进行优化选择;由于无线回传网络结构复杂，规模庞大，也需要自组织网络功能以实现回传网络的智能化。
 
 
-\subsection{自动部署应用}
+\subsection{自配置应用}
+\label{sec:self-configuration}
 
-每个新网络节点的引入和设置，包括站点位置选择、硬件配置标准化以及每个新网络节点的准备、安装、鉴权和认证。基本涵盖了将一个新节点纳入网络中运行的全部过程。
+在SON中，自配置是指自动配置当前网络中，如微基站，中继站，宏基站等所有设备参数的过程。此外，若当前网络系统已经开始运行，又有新网络节点引入以及设置，或者网络从故障中重新启动，此时自配置包括站点位置选择、硬件配置标准化以及每个新网络节点的准备、安装、鉴权和认证，基本涵盖了将一个新节点纳入网络中运行的全部过程 \cite{Aliu2013}。针对SON中出现的不同类型问题，\cite{Wainio2016}提出了一种通用框架，在自配置的角度，该框架提供实现网络自组织的所需的一些基本步骤，首先在部署之前，基站已经配置基本的操作参数，这些参数对于各种实际应用场景是不变的，因此不需要再次部署。其次，第二阶段的配置包括扫描并确定基站的相邻基站，建立起邻基站列表(Neighbour Cell List, NCL)。最后阶段是基于现有网络拓扑，对新部署的基站后的网络进行参数调整。与该方法不同的是 \cite{Hu2010}文中提出的部署新基站的方式为感知并选中一个相邻基站进行所必须的参数请求以及下载。因此，无论哪种方法，自配置的基本应用包括部分 1）配置基站基本操作参数，2）探测邻小区并配置NCL参数，3）调整网络拓扑匹配当前新添加的基站。
 
-\subsection{自动优化应用}
+为了实现自配置，目前应用的学习算法不仅可以配置基本的操作参数而且可以发现邻域基站并初始化。由于异构网络的复杂度增加，以及基站的功能日渐丰富，造成自配置阶段需要处理的参数也大量增加，而且参数之间的耦合性也是系统运维人员需要考虑的重要因素。根据上述的问题以及解决方案的主要步骤，在接下来的部分中讨论了强化学习解决方案。
 
-利用用户设备和基站收集的测量值和性能指标自动调整网络设置。
+\subsubsection{操作参数配置}
+
+自配置参数
+
+\subsubsection{NCL参数配置}
+
+\subsubsection{无线电参数配置}
+
+
+
+\subsection{自优化应用}
+\label{sec:self-optimization}
+移动网络是动态变化的，包括不断地部署新站地址，扩充当前网络容量，调整参数以适应本地业务量和环境条件。在无线自组织网络中，自优化的概念被定义为不断监视网络极其环境参数的函数，并更新相应的参数，以保证网络尽可能高效的运行\cite{Aliu2013}。网络优化是连续的闭环处理过程，包括周期性的性能评估，参数的优化以及优化后参数的重新部署。初始化阶段自配置得到的参数在后期不再适用，需要进行优化以提升网络性能。由于网络中需要优化的参数规模较大，耦合性强，复杂度较高，  。
+
+优化过程中所需要的输入数据可以通过不同的途径获得，例如运行和维护(Operation and management)性能测量，追踪主要接口(例如：Uu、Iub和Iu等)以及联合位置信息的接口测量数据的路测技术。网络运营商在网络运行的过程中收集了大量的数据，进而为优化网络的智能解决方案应用提供训练数据支持。利用用户设备和基站收集的测量值和性能指标，结合强化学习算法进行自动调整网络设置是一种可行的自优化方案。基于\cite{3gpp.36.902}中定义的用例以及本文所引用的相关文献，自优化的应用在以下部分进行描述。
+
+\subsubsection{回程线路优化}
+
+回程线路(Backhaul)是蜂窝网络系统中较为重要的概念，它表示基站与基站控制器之间的链接，是基站接入核心网的实现途径。现行的蜂窝网络系统仅考虑用户与基站之间的信号连接质量，但由于系统规模的不断扩张，这种方法无法解决不同类型的数据在更广泛的应用程序的可靠性问题。而回程线路可以改善用户和核心网络之间的连接，基于此的网络优化设计面临的问题在不同的文献中以不同的问题呈现，例如服务质量(QoS)，用户体验质量(QoE)，拥塞控制以及网络拓扑管理等。\cite{Wainio2016} 以及\cite{Chernov2014} 中提出。
+
+文献中提到的解决方案设计的范围较为广泛，例如\cite{Wainio2016}和\cite{Chen2015}在文章中提出的回程线路优化方案用于解决
+
+
+
+
+
+\subsubsection{缓存}
+\subsubsection{容量}
+\subsubsection{移动性管理}
+\subsubsection{切换参数优化}
+\subsubsection{负载均衡}
+\subsubsection{资源优化}
+
+
 
 \subsection{自动愈合应用}
 
 执行网络运行和阻止出现突发情况，包括必要的软件和硬件的更新或替换。
-
+\subsubsection{故障检测}
+\subsubsection{故障分类}
+\subsubsection{服务中断管理}
 
 \section{自组织网络中的强化学习算法}
 \label{sec:Compare}
