--- a/基于强化学习的无线网络自组织性研究/基于强化学习的无线网络自组织性研究.tex
+++ b/基于强化学习的无线网络自组织性研究/基于强化学习的无线网络自组织性研究.tex
@@ -119,15 +119,18 @@ LTE的部署对SON的推进，涉及到若干问题及其解决方案。
 
 \subsubsection{回程线路优化}
 
-回程线路(Backhaul)是蜂窝网络系统中较为重要的概念，它表示基站与基站控制器之间的链接，是基站接入核心网的实现途径。现行的蜂窝网络系统仅考虑用户与基站之间的信号连接质量，但由于系统规模的不断扩张，这种方法无法解决不同类型的数据在更广泛的应用程序的可靠性问题。而回程线路可以改善用户和核心网络之间的连接，基于此的网络优化设计面临的问题在不同的文献中以不同的问题呈现，例如服务质量(QoS)，用户体验质量(QoE)，拥塞控制以及网络拓扑管理等。\cite{Wainio2016} 以及\cite{Chernov2014} 中提出。
+回程线路(Backhaul)是蜂窝网络系统中较为重要的概念，它表示基站与基站控制器之间的链接，是基站接入核心网的实现途径。现行的蜂窝网络系统仅考虑用户与基站之间的信号连接质量，但由于系统规模的不断扩张，这种方法无法解决不同类型的数据在更广泛的应用程序的可靠性问题。而回程线路可以改善用户和核心网络之间的连接，基于此的网络优化设计面临的问题在不同的文献中以不同方式描述，例如服务质量(QoS)，用户体验质量(QoE)，拥塞控制以及网络拓扑管理等。
+%\cite{Wainio2016} 以及\cite{Chernov2014} 中提出。
 
-文献中提到的解决方案设计的范围较为广泛，例如\cite{Wainio2016}和\cite{Chen2015}在文章中提出的回程线路优化方案用于解决
+现有文献中提到的解决方案设计的范围较为广泛，例如\cite{Wainio2016}和\cite{Chen2015}在文章中提出的回程线路优化方案涉及到灵活的QoS方案，拥塞控制机制，负载均衡以及调度均衡等问题。而另外一种回程线路优化方案是使用强化学习中较为经典的Q-学习算法，\cite{Jaber2015}\cite{Jaber2016a}\cite{Jaber2016c}将用户用不同类型的需求来描述，比如对容量、延迟等参数的要求。而回程线路由分布各不相同的基站提供，若搜索到的回程线路的参数满足该用户需求，则建立起回程线路与用户的连接；否则继续搜索满足要求的基站来提供回程线路。文章结论表明提出的Q-学习算法可以为用户在一定范围内牺牲总的吞吐量带来较大的服务质量的提升。
 
-
-
-
+从引入回程线路的作用来看，未来网络的优化必然考虑这一因素，但现在并未普及。因此未来研究方向可以从这一领域进行探索。
 
 \subsubsection{缓存}
+
+
+
+
 \subsubsection{容量}
 \subsubsection{移动性管理}
 \subsubsection{切换参数优化}
