Finish Section self-configuration and add several bib items

--- a/基于强化学习的无线网络自组织性研究/SON.bib
+++ b/基于强化学习的无线网络自组织性研究/SON.bib
@@ -631,55 +631,136 @@
 }
 
 @Article{Hu2010,
-  author        = {Hu, Honglin and Zhang, Jian and Zheng, Xiaoying and Yang, Yang and Wu, Ping},
-  title         = {Self-configuration and self-optimization for LTE networks},
-  journal       = {IEEE Communications Magazine},
-  year          = {2010},
-  volume        = {48},
-  number        = {2},
-  __markedentry = {[Administrator:]},
-  publisher     = {IEEE},
+  author    = {Hu, Honglin and Zhang, Jian and Zheng, Xiaoying and Yang, Yang and Wu, Ping},
+  title     = {Self-configuration and self-optimization for LTE networks},
+  journal   = {IEEE Communications Magazine},
+  year      = {2010},
+  volume    = {48},
+  number    = {2},
+  publisher = {IEEE},
 }
 
 @InProceedings{Chen2015,
-  author        = {Chen, David and Schuler, Joseph and Wainio, Pekka and Salmelin, Juha},
-  title         = {5G self-optimizing wireless mesh backhaul},
-  booktitle     = {Computer Communications Workshops (INFOCOM WKSHPS), 2015 IEEE Conference on},
-  year          = {2015},
-  pages         = {23--24},
-  organization  = {IEEE},
-  __markedentry = {[Administrator:6]},
+  author       = {Chen, David and Schuler, Joseph and Wainio, Pekka and Salmelin, Juha},
+  title        = {5G self-optimizing wireless mesh backhaul},
+  booktitle    = {Computer Communications Workshops (INFOCOM WKSHPS), 2015 IEEE Conference on},
+  year         = {2015},
+  pages        = {23--24},
+  organization = {IEEE},
 }
 
 @InProceedings{Jaber2015,
-  author        = {Jaber, Mona and Imran, Muhammad and Tafazolli, Rahim and Tukmanov, Anvar},
-  title         = {An adaptive backhaul-aware cell range extension approach},
-  booktitle     = {Communication Workshop (ICCW), 2015 IEEE International Conference on},
-  year          = {2015},
-  pages         = {74--79},
-  organization  = {IEEE},
-  __markedentry = {[Administrator:6]},
+  author       = {Jaber, Mona and Imran, Muhammad and Tafazolli, Rahim and Tukmanov, Anvar},
+  title        = {An adaptive backhaul-aware cell range extension approach},
+  booktitle    = {Communication Workshop (ICCW), 2015 IEEE International Conference on},
+  year         = {2015},
+  pages        = {74--79},
+  organization = {IEEE},
 }
 
 @Article{Jaber2016a,
-  author        = {Jaber, Mona and Imran, Muhammad Ali and Tafazolli, Rahim and Tukmanov, Anvar},
-  title         = {A distributed SON-based user-centric backhaul provisioning scheme},
-  journal       = {IEEE Access},
-  year          = {2016},
-  volume        = {4},
-  pages         = {2314--2330},
-  __markedentry = {[Administrator:6]},
-  publisher     = {IEEE},
+  author    = {Jaber, Mona and Imran, Muhammad Ali and Tafazolli, Rahim and Tukmanov, Anvar},
+  title     = {A distributed SON-based user-centric backhaul provisioning scheme},
+  journal   = {IEEE Access},
+  year      = {2016},
+  volume    = {4},
+  pages     = {2314--2330},
+  publisher = {IEEE},
 }
 
 @InProceedings{Jaber2016c,
-  author        = {Jaber, Mona and Imran, Muhammad Ali and Tafazolli, Rahim and Tukmanov, Anvar},
-  title         = {A multiple attribute user-centric backhaul provisioning scheme using distributed son},
-  booktitle     = {Global Communications Conference (GLOBECOM), 2016 IEEE},
-  year          = {2016},
-  pages         = {1--6},
+  author       = {Jaber, Mona and Imran, Muhammad Ali and Tafazolli, Rahim and Tukmanov, Anvar},
+  title        = {A multiple attribute user-centric backhaul provisioning scheme using distributed son},
+  booktitle    = {Global Communications Conference (GLOBECOM), 2016 IEEE},
+  year         = {2016},
+  pages        = {1--6},
+  organization = {IEEE},
+}
+
+@InProceedings{Imran2013a,
+  author       = {Imran, Ali and Yaacoub, Elias and Dawy, Zaher and Abu-Dayya, Adnan},
+  title        = {Planning future cellular networks: A generic framework for performance quantification},
+  booktitle    = {Wireless Conference (EW), Proceedings of the 2013 19th European},
+  year         = {2013},
+  pages        = {1--7},
+  organization = {VDE},
+}
+
+@InProceedings{Binzer2000,
+  author       = {Binzer, Thomas and Landstorfer, Friedrich M},
+  title        = {Radio network planning with neural networks},
+  booktitle    = {Vehicular Technology Conference, 2000. IEEE-VTS Fall VTC 2000. 52nd},
+  year         = {2000},
+  volume       = {2},
+  pages        = {811--817},
+  organization = {IEEE},
+}
+
+@TechReport{3gpp.32.511,
+  author      = {3rd Generation Partnership Project},
+  title       = {Telecommunication management Automatic Neighbour Relation (ANR) management Concepts and requirements},
+  institution = {3GPP},
+  year        = {2017},
+  type        = {Tech. Rep.},
+  number      = {32.511},
+}
+
+@InProceedings{Lee2014,
+  author       = {Lee, Chien-Lung and Su, Wen-Shu and Tang, Kai-An and Chao, Wei-I},
+  title        = {Design of handover self-optimization using big data analytics},
+  booktitle    = {Network operations and management symposium (APNOMS), 2014 16th Asia-Pacific},
+  year         = {2014},
+  pages        = {1--5},
+  organization = {IEEE},
+}
+
+@InProceedings{Kim2010,
+  author       = {Kim, Dooyoung and Shin, Bongjhin and Hong, Daehyoung and Lim, Jaechan},
+  title        = {Self-configuration of neighbor cell list utilizing E-UTRAN NodeB scanning in LTE systems},
+  booktitle    = {Consumer communications and networking conference (CCNC), 2010 7th IEEE},
+  year         = {2010},
+  pages        = {1--5},
+  organization = {IEEE},
+}
+
+@InProceedings{Li2007,
+  author       = {Li, Juan and Jantti, Riku},
+  title        = {On the study of self-configuration neighbour cell list for mobile WiMAX},
+  booktitle    = {Next Generation Mobile Applications, Services and Technologies, 2007. NGMAST'07. The 2007 International Conference on},
+  year         = {2007},
+  pages        = {199--204},
+  organization = {IEEE},
+}
+
+@InProceedings{Sanneck2010,
+  author       = {Sanneck, Henning and Bouwen, Yves and Troch, Eddy},
+  title        = {Context based configuration management of plug \& play LTE base stations},
+  booktitle    = {Network Operations and Management Symposium (NOMS), 2010 IEEE},
+  year         = {2010},
+  pages        = {946--949},
+  organization = {IEEE},
+}
+
+@InProceedings{Razavi2010a,
+  author        = {Razavi, Rouzbeh and Klein, Siegfried and Claussen, Holger},
+  title         = {Self-optimization of capacity and coverage in LTE networks using a fuzzy reinforcement learning approach},
+  booktitle     = {Personal Indoor and Mobile Radio Communications (PIMRC), 2010 IEEE 21st International Symposium on},
+  year          = {2010},
+  pages         = {1865--1870},
   organization  = {IEEE},
+  __markedentry = {[Administrator:]},
+}
+
+@Article{Peng2013,
+  author        = {Peng, Mugen and Liang, Dong and Wei, Yao and Li, Jian and Chen, Hsiao-Hwa},
+  title         = {Self-configuration and self-optimization in LTE-advanced heterogeneous networks},
+  journal       = {IEEE Communications Magazine},
+  year          = {2013},
+  volume        = {51},
+  number        = {5},
+  pages         = {36--45},
   __markedentry = {[Administrator:6]},
+  publisher     = {IEEE},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
