--- a/基于强化学习的无线网络自组织性研究/基于强化学习的无线网络自组织性研究.tex
+++ b/基于强化学习的无线网络自组织性研究/基于强化学习的无线网络自组织性研究.tex
@@ -1,5 +1,5 @@
-﻿%\documentclass[11pt,draftclsnofoot,onecolumn,journal,letterpaper]{IEEEtran}
-\documentclass{IEEEtran}
+﻿\documentclass[11pt,draftclsnofoot,onecolumn,journal,letterpaper]{IEEEtran}
+%\documentclass{IEEEtran}
 
 \usepackage[UTF8]{ctex}
 \begin{document}
@@ -21,10 +21,7 @@
 %介绍无线自组织网络发展现状，以及部署在5G网络中的具体应用
 %强调learning算法在SON中应用的必要性。
 
-在传统的移动通信网络中，网络部署、运维等基本依靠人工的方式，需要投入大量的人力，给运营商带来巨大的运行成本。并且，随着移动通信网络的发展，依靠人工的方式难以实现网络的优化。因此，为了解决网络部署、优化的复杂性问题，降低运维成本相对总收入的比例，使运营商能高效运营、维护网络，在满足客户需求的同时，自身也能够持续发展，由 NGMN (next generation mobile network) 联盟中的运营商主导，联合主要的设备制造商提出了自组织网络 (SON) 的概念\cite{Alliance2008}。由于 5G 将采用大规模 MIMO 无线传输技术，使得空间自由度大幅度增加，从而带来天线选择、协作节点优化、波束选择、波束优化、多用户联合资源调配等方面的灵活性。对这些技术的优化，是5G 系统SON技术的重要内容。自组织网络的思路是在网络中引入自组织能力(网络智能化)，包括自配置、自优化、自愈合等实现网络规划、部署、维护、优化和排障等各个环节的自动进行，最大限度地减少人工干预，并结合先进的学习理论逐步提升网络智能化。
-
-
-
+在传统的移动通信网络中，网络部署、运维等基本依靠人工的方式，需要投入大量的人力，给运营商带来巨大的运行成本。并且，随着移动通信网络的发展，依靠人工的方式难以实现网络的优化。因此，为了解决网络部署、优化的复杂性问题，降低运维成本相对总收入的比例，使运营商能高效运营、维护网络，在满足客户需求的同时，自身也能够持续发展，由 NGMN (Next Generation Mobile Network) 联盟中的运营商主导，联合主要的设备制造商提出了自组织网络 (SON) 的概念\cite{Alliance2008}。由于 5G 将采用大规模 MIMO 无线传输技术，使得空间自由度大幅度增加，从而带来天线选择、协作节点优化、波束选择、波束优化、多用户联合资源调配等方面的灵活性。对这些技术的优化，是5G 系统SON技术的重要内容。自组织网络的思路是在网络中引入自组织能力即实现网络智能化，包括自配置、自优化、自愈合等实现网络规划、部署、维护、优化和排障等各个环节的自动进行，最大限度地减少人工干预，并结合先进的学习理论逐步提升网络智能化。
 
 
 \subsection{强化学习简介}
@@ -99,21 +96,44 @@ LTE的部署对SON的推进，涉及到若干问题及其解决方案。
 
 在SON中，自配置是指自动配置当前网络中，如微基站，中继站，宏基站等所有设备参数的过程。此外，若当前网络系统已经开始运行，又有新网络节点引入以及设置，或者网络从故障中重新启动，此时自配置包括站点位置选择、硬件配置标准化以及每个新网络节点的准备、安装、鉴权和认证，基本涵盖了将一个新节点纳入网络中运行的全部过程 \cite{Aliu2013}。针对SON中出现的不同类型问题，\cite{Wainio2016}提出了一种通用框架，在自配置的角度，该框架提供实现网络自组织的所需的一些基本步骤，首先在部署之前，基站已经配置基本的操作参数，这些参数对于各种实际应用场景是不变的，因此不需要再次部署。其次，第二阶段的配置包括扫描并确定基站的相邻基站，建立起邻基站列表(Neighbour Cell List, NCL)。最后阶段是基于现有网络拓扑，对新部署的基站后的网络进行参数调整。与该方法不同的是 \cite{Hu2010}文中提出的部署新基站的方式为感知并选中一个相邻基站进行所必须的参数请求以及下载。因此，无论哪种方法，自配置的基本应用包括部分 1）配置基站基本操作参数，2）探测邻小区并配置NCL参数，3）调整网络拓扑匹配当前新添加的基站。
 
-为了实现自配置，目前应用的学习算法不仅可以配置基本的操作参数而且可以发现邻域基站并初始化。由于异构网络的复杂度增加，以及基站的功能日渐丰富，造成自配置阶段需要处理的参数也大量增加，而且参数之间的耦合性也是系统运维人员需要考虑的重要因素。根据上述的问题以及解决方案的主要步骤，在接下来的部分中讨论了强化学习解决方案。
+为了实现自配置，目前应用的学习算法不仅可以配置基本的操作参数而且可以发现邻域基站并初始化。由于异构网络的复杂度增加，以及基站的功能日渐丰富，造成自配置阶段需要处理的参数也大量增加，而且参数之间的耦合性也是系统运维人员需要考虑的重要因素。根据上述的问题以及解决方案的主要步骤，在接下来的用例中讨论强化学习解决方案。
 
 \subsubsection{操作参数配置}
 
-自配置参数
+网络自配置的第一阶段是关于基站基本参数的初始化操作，包括IP地址、网关、小区标识(Cell IDentity,CID)、物理小区标识(Physical Cell Identity,PCI)等参数。
+
+Imran等人在\cite{Imran2013a}提出用于描述蜂窝网系统中主要的关键性能指标的框架，以及此后出现多种将系统的整体规划与分析模型相结合的方案，均用于解决多目标优化问题，以确定最佳的小区规划参数，例如基站位置、扇区数、天线高度、方位角、传输功率和频率重用因数等。
+
+Hu等人在\cite{Hu2010}提出自配置的辅助解决方案，用于网络中部署新的基站。文章指出新的基站应获取自身的IP地址和操作、管理和维护中心。该过程可以通过动态主机配置协议(Dynamic Host Configuration Protocol,DHCP)、引导协议(BOOTstrap Protocol,BOOTP)或通过使用Internet组管理协议(Internet Group Management Protocol,IGMP)进行多项转换来完成。之后，新基站搜索附近的相邻小区，并获取无线电参数并继续其他的操作。
+
+从智能的角度来看，\cite{Wainio2016}和\cite{Hu2010}的解决方案并不适用于学习算法，因为它们都依赖于预先配置的参数以及其他相邻基站的信息。Peng等人在\cite{Peng2013}给出智能算法解决在异构 LTE 网络中配置PCI和覆盖率等相关参数的思路。在PCI配置方面，文章中提出一种基于分组的算法，先将PCI资源与基站划分为多个子集，然后将每个站点分配到特定的子集中，通过基站之间的PCI参数的自主分配，在网络中实现最大化PCI复用距离，并同时避免了多路复用干扰。
 
 \subsubsection{NCL参数配置}
 
-\subsubsection{无线电参数配置}
+当系统中有新基站添加进入时，它应当感知相邻一定范围内的其他基站，并建立起通信连接，从而实现网络的基本功能，例如切换(HandOver,HO)。而NCL则是蜂窝网系统基于当前所有基站的统计信息，对新添加基站的进行管理的数据库列表。
 
+5G技术的逐步完善，给不同系统间的基站切换带来更为复杂的挑战。为了完成UMTS、CDMA以及LTE等不同系统之间的自由切换，以实现无线通信的平滑过渡，基站在维护NCL时采用更为先进的模式。新的模式是通过自动邻区关系(ANR)功能实现的，\cite{3gpp.32.511} 提出解决不同系统之间用户切换的策略：预规划黑白列表，初始化次优化临区列表，甚至初始化空白临区列表等。对NCL的配置依赖于两种功能的实现，一方面是必须感知到新部署基站的加入，并向该基站发送所需要的NCL信息，另一方面必须将新部署基站信息添加到相邻基站的NCL中。
+
+现有的文章较多注重于感知新部署基站加入时的部署问题研究，如\cite{Lee2014},\cite{Kim2010}，但也有一些作者侧重于研究后一种问题。如\cite{Wainio2016}中，作者提出现利用现有的基站周期性地扫描周围环境，进行NCL信息交换，在扫描过程中若出现新的基站则添加到现有网络中。大部分作者提出的解决方案都依赖于使用反馈控制器来执行NCL配置，没有考虑更为智能化的配置方法。
+
+Li等人在\cite{Li2007}中提出两种不同配置方案，第一种解决方案基于基站之间的物理距离，通过判断原有基站是否在新部署基站的给定半径的范围内，若在该范围内，则将该基站添加到新部署基站的NCL中。第二种方案不仅评估相邻基站的距离，而且引入天线参数，并由小区重叠的情况确定是否添加该NCL项。
+
+
+\subsubsection{无线电参数配置}
+在得到NCL信息之后，基站必须配置其余的无线电参数，包括小区标识，基站功率设置，切换设置参数（如滞后时间和触发时间），随机接入信道参数导频功率，分段资源分配，以及其他相关的配置新基站的无线资源管理参数。
+
+传统的无线电参数配置方式是根据从其邻居基站收集到的测量值和数据来调整，例如在\cite{Sanneck2010}中，作者提出一种LTE基站的自配置架构，这种架构下配置基站参数是通过动态分配基站参数的子集实现的。文章中提出动态无线电配置功能 (DRCF)，评估基站的邻居覆盖区域，以确定新基站的最佳参数，形成小区群并提供跟踪区域码(TAC)，减少配置复杂度。
+
+此外，在无线电参数配置中应用强化学习算法也是较为普遍的解决方案，在\cite{Razavi2010}中，Razavi提出可以通过学习算法来配置天线下倾角度，以实现调整基站的覆盖范围和容量。作者在文章具体分析了LTE网络系统的场景下三种不同的模糊Q学习算法，并且从学习速度和收敛性方面做出比较。第一种情况在每个时隙中仅研究一个小区的参数配置情况，第二种场景中同时研究所有的小区，第三种场景是将所有的小区分成若干个簇，每个时隙只允许一个小区簇进行更新。结果表明所有的方法都能够学习到最佳天线下倾角，但前两种方法的弊端分别是收敛速度过慢，以及复杂度过高。所以使用小区簇的方式可以达到学习收敛速度与复杂度的折中。
+
+更进一步的工作在\cite{Razavi2010a}中展示，文章提出了分布式FQL算法, 以便在LTE网络场景中配置天线的下倾角度。此外，作者从频谱效率的角度对算法性能进行了评价, 并将算法与模糊规则 (ELF) 的学习进行了比较。另外一种采用FQL 概念的工作由Islam 在\cite{Islam2012}中提出。在尝试利用调整下倾角度的方法解决参数配置问题的基础上，文章还考虑了热噪声和接收机噪声两个噪声源，将结果与标准模糊规则进行了对比。
+
+表格中列出了自配置用例及其各自的学习算法的应用。
 
 
 \subsection{自优化应用}
 \label{sec:self-optimization}
-移动网络是动态变化的，包括不断地部署新站地址，扩充当前网络容量，调整参数以适应本地业务量和环境条件。在无线自组织网络中，自优化的概念被定义为不断监视网络极其环境参数的函数，并更新相应的参数，以保证网络尽可能高效的运行\cite{Aliu2013}。网络优化是连续的闭环处理过程，包括周期性的性能评估，参数的优化以及优化后参数的重新部署。初始化阶段自配置得到的参数在后期不再适用，需要进行优化以提升网络性能。由于网络中需要优化的参数规模较大，耦合性强，复杂度较高，  。
+移动网络是动态变化的，包括不断地部署新站地址，扩充当前网络容量，调整参数以适应本地业务量和环境条件。在无线自组织网络中，自优化的概念被定义为不断监视网络极其环境参数的函数，并更新相应的参数，以保证网络尽可能高效的运行\cite{Aliu2013}。网络优化是连续的闭环处理过程，包括周期性的性能评估，参数的优化以及优化后参数的重新部署。初始化阶段自配置得到的参数在后期不再适用，需要进行优化以提升网络性能。由于网络中需要优化的参数规模较大，耦合性强，复杂度较高，？？？？
 
 优化过程中所需要的输入数据可以通过不同的途径获得，例如运行和维护(Operation and management)性能测量，追踪主要接口(例如：Uu、Iub和Iu等)以及联合位置信息的接口测量数据的路测技术。网络运营商在网络运行的过程中收集了大量的数据，进而为优化网络的智能解决方案应用提供训练数据支持。利用用户设备和基站收集的测量值和性能指标，结合强化学习算法进行自动调整网络设置是一种可行的自优化方案。基于\cite{3gpp.36.902}中定义的用例以及本文所引用的相关文献，自优化的应用在以下部分进行描述。
 
@@ -128,7 +148,7 @@ LTE的部署对SON的推进，涉及到若干问题及其解决方案。
 
 \subsubsection{缓存}
 
-
+缓存(Caching)在网络中的重要性随着多媒体以及流媒体服务的流行日益增加。由于智能手机的普及，移动网络的通信量呈几何式增长，而数据传输的速率和滞后时间的要求在某些业务下更为严格。
 
 
 \subsubsection{容量}
@@ -140,6 +160,10 @@ LTE的部署对SON的推进，涉及到若干问题及其解决方案。
 
 
 \subsection{自动愈合应用}
+
+在自组织网络中，自愈合可以定义为一种自发执行的行为，它可以保证网络的正常运行，以及防止破坏性问题的出现。具体的功能不仅包括解决坑你发生的故障，而且应当自动执行故障检测、诊断、以及触发相应的纠正机制，在网络异常发生之前采取必要的措施。目前网络故障解决方案依靠人工干预以及反应性方法，即只有在网络中出现故障导致系统运行产生错误后才会触发愈合过程，这种方式会降低蜂窝网的服务质量。从学习算法的角度来考虑这个问题则具有一定的挑战性。学习算法试图预测故障出现时的多种特征，依赖于先前搜集到的大量数据，以便建立相应的数学模型。某些情况下可以很容易的对得到的数据类型进行标记，例如故障分类。但对其他类型的数据进行标记，例如系统停运时，有些变量并没有发生明显的变化，这种情况下的故障与数据之间的联系就并不关键。
+
+
 
 执行网络运行和阻止出现突发情况，包括必要的软件和硬件的更新或替换。
 \subsubsection{故障检测}
