--- a/基于强化学习的无线网络自组织性研究/基于强化学习的无线网络自组织性研究.tex
+++ b/基于强化学习的无线网络自组织性研究/基于强化学习的无线网络自组织性研究.tex
@@ -29,7 +29,13 @@
 %简单概括强化学习定义，泛化介绍其特点，应用，不用展开，第二部分会具体讲
 %介绍强化学习的发展现状，与通信场景结合实际应用的可行性分析。
 
-SON在蜂窝网络中被定义为一个网络的概念，不仅具有自适应和自主功能，而且还具有足够的可扩展性，稳定性和灵活性，即使在环境发生变化时也能保持其期望的目标。虽然学习的方法没有直接包含在SON的定义中，但学习算法在系统功能的实现以及自动维护的问题上可以代替人工更有效地解决预料之外的问题。\emph{强化学习（Reinforcement Learning, RL）}是一种应用较为普遍的学习算法，这种算法以环境的状态作为输入，通过系统与环境的交互和试错，根据在交互过程中产生的评价性反馈信号，实现最终决策的不断优化。区别与传统的有监督、无监督学习算法，强化学习算法是
+SON在蜂窝网络中被定义为一个网络的概念，不仅具有自适应和自主功能，而且还具有足够的可扩展性，稳定性和灵活性，即使在环境发生变化时也能保持其期望的目标。虽然学习的方法没有直接包含在SON的定义中，但学习算法在系统功能的实现以及自动维护的问题上可以代替人工更有效地解决预料之外的问题。\emph{强化学习（Reinforcement Learning, RL）}是一种应用较为普遍的学习算法，这种算法以环境的状态作为输入，通过系统与环境的交互和试错，根据在交互过程中产生的评价性反馈信号，实现最终决策的不断优化。传统的有监督学习（Supervised Learning）依靠有标签的数据样本通过分类器推断功能，从而得到新实例的映射。无监督学习（Unsupervised Learning）相反是针对无标签数据进行自主结构性学习的过程。强化学习类似无监督学习，同样不需要预先标记的数据，不同的是强化学习依靠与环境及状态的实时信息交互，即从环境中获得回报（Reward）并依此调整策略，逐渐获得最大化的预期利益。
+\begin{figure}%[h]
+\centerline{\includegraphics[width=0.4\textwidth]{reinforcement.pdf}}
+\caption{基本强化学习过程示意图}
+\label{fig:rein}
+\end{figure}
+图\ref{fig:rein}直观说明了强化学习的典型过程：进行学习操作的主体收到系统的状态以及与上一次状态转换相关的回报函数，之后主体依据历史信息计算出下一步的操作传送给系统。作为回应，系统转换到下一状态并不断重复上述过程。整个问题的目的在于逐渐学习一系列操作来控制系统，从而最大化总的回报函数。强化学习中包含几类不同的问题，将在第\ref{sec:RL}部分中具体叙述，区别主要在于系统返回数据的方式以及不同的性能度量方法。
 
 
 \subsection{本文工作}
