--- a/基于强化学习的无线网络自组织性研究/RL.bib
+++ b/基于强化学习的无线网络自组织性研究/RL.bib
@@ -127,4 +127,43 @@
   pages   = {1453-1461},
 }
 
+@InProceedings{Agrawal2012,
+  author    = {Shipra Agrawal and Navin Goyal},
+  title     = {Analysis of Thompson Sampling for the Multi-armed Bandit Problem},
+  booktitle = {Proceedings of the 25th Annual Conference on Learning Theory},
+  year      = {2012},
+  volume    = {23},
+  pages     = {39.1--39.26},
+  publisher = {PMLR},
+}
+
+@InProceedings{Glorennec1997,
+  author    = {P. Y. Glorennec and L. Jouffe},
+  title     = {Fuzzy Q-learning},
+  booktitle = {Proceedings of 6th International Fuzzy Systems Conference},
+  year      = {1997},
+  volume    = {2},
+  pages     = {659-662},
+  month     = {Jul},
+}
+
+@InProceedings{Kaufmann2012,
+  author    = {Emilie Kaufmann and Nathaniel Korda and R{\'e}mi Munos},
+  title     = {Thompson Sampling: An Asymptotically Optimal Finite-Time Analysis},
+  booktitle = {Algorithmic Learning Theory},
+  year      = {2012},
+  pages     = {199--213},
+  publisher = {Springer Berlin Heidelberg},
+}
+
+@InProceedings{Kaufmann2012a,
+  author    = {Emilie Kaufmann and Olivier Cappe and Aurelien Garivier},
+  title     = {On Bayesian Upper Confidence Bounds for Bandit Problems},
+  booktitle = {Proceedings of the Fifteenth International Conference on Artificial Intelligence and Statistics},
+  year      = {2012},
+  volume    = {22},
+  pages     = {592--600},
+  publisher = {PMLR},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
