--- a/基于强化学习的无线网络自组织性研究/基于强化学习的无线网络自组织性研究.tex
+++ b/基于强化学习的无线网络自组织性研究/基于强化学习的无线网络自组织性研究.tex
@@ -284,24 +284,27 @@ Zoha等人\cite{Zoha2016}将模糊Q学习算法应用于对服务中断的小区
 
 \section{自组织网络中的强化学习算法}
 \label{sec:Compare}
-在无线通信网络中引入学习的方法是使网络达到智能化的有效途径，然而不同的自组织网络场景与功能具有不同的需求，需要特定算法匹配。在这一部分我们将分析各种算法在自组织网络中解决问题的性能，包括稳定性，时效性，准确度，收敛时间，复杂度等。
+在无线通信网络中引入学习的方法是使网络得以实现自组织的有效途径，然而不同的自组织网络阶段与场景有其特定的设定与需求，这就需要选择合适的自组织网络算法予以匹配。在这一部分我们将分析各种算法在自组织网络中解决问题的性能，衡量标准既包括算法方面的复杂度，收敛性能等因素，同样包括通信网络中常用的可扩展性、鲁棒性等特性。考虑到衡量算法的性能标准范围广泛，我们在这里只给出自组织网络算法中比较重点关注的几个指标的分析。
 %依据 \cite{Klaine2017} Section  VI中提到的性能参数对上一部分中提及参考文献所涉及的技术进行横向对比。
-\subsection{扩展性}
-自组织网络的一项重要特点为可扩展性，因为在实际场景中为提高网络性能，新的基站可能随时加入到网络中。算法的可扩展性体现为可以解决系统规模上的增长，例如采用分布式系统，基站的增加不会造成复杂度的翻倍。
+\subsection{可扩展性}
+算法的可扩展性体现为适用于系统规模的不断增长，例如输入数据的增加，数据维数的增加等，且不会造成算法复杂度的翻倍。自组织网络的一项重要特点即为可扩展性，因为在实际的通信场景中为了提高网络整体性能，如在热点或信号较差地区增加基站，系统的规模将随之逐渐增大。5G中提出的超密集异构网结构方式则更是体现了这一点。在自组织网络中，需要考虑可扩展性的问题主要有同一区域内多个基站的功率分配与覆盖范围的优化，在这个问题中每个基站的功率选择既要保证自己的覆盖性能，同时考虑基站间干扰影响。另外还有考虑多用户情况下的基站关联问题，需要算法解决网络中用户数较多的情况。在自修复阶段，网络中所有节点的差错检测与管理也同样需要算法的可扩展性。
 
-现有的体现可扩展性的例子有\cite{Dirani2010} 中通过建立马尔科夫决策过程构造分布式强化学习模型，每个基站为独立的代理并且基站间合作传递性能信息以达到整体的性能最优。这种分布式非同步的特征保证了策略的可扩展性。
+现有的实现可扩展性的强化学习算法一般采用分布式模型，即多代理模型（Multi-agent），并进一步利用合作的策略，通过代理间信息的交互以达到整体性能的最优，这种分布式非同步的特征保证了策略的可扩展性。具体的例子有\cite{Dirani2010}\cite{Fan2014}\cite{Islam2012}，分别利用分布式模糊Q学习算法处理干扰控制、功率控制与容量优化等问题。\cite{Maghsudi2017}中利用分布式结构的赌博机算法在每个用户上独立解决基站关联问题。
 
 \subsection{复杂度}
-系统的复杂度一般定义为算法运行时的数学计算量与所需要的空间存储量，同时考虑到复杂的系统需要较多的运行操作，复杂度还与运行系统所需的能耗以及运行结果产生的时间有关。
+算法的复杂度一般由算法运行时的数学计算量与所需要的空间存储量所衡量。在实际的通信网络中，考虑到复杂的算法流程需要更多的运行操作，复杂度还与运行算法所需的能耗以及运行结果产生的时间有关。一个强化学习中复杂度较高的算法为Q学习方法，因为在算法运行过程中需要实时存储更新每个状态-动作对的Q函数值，特别是在输入的状态动作空间较大的情况下，对计算量与存储空间都有很大要求。对Q学习的改进现在包括引入模糊推理系统来降低了Q函数存储量，或引入人工神经网络（ANN）来对Q函数值做近似处理\cite{Ghadimi2017}。
 
-在自组织网络算法中，高复杂度较常见出现在Q学习中，因为需要存储每次更新的Q函数值，而通信问题中输入的状态动作空间较大，导致较高的复杂度。为了在减小运算量又能保证性能的同时，模糊推理系统被引入与Q学习相结合，在自优化中的负载均衡与干扰控制等问题中得到了合适的运用。
+在自组织网络功能中，很多问题都需要考虑实际复杂度问题，比如Kim等人\cite{Kim2014}在运用马尔科夫决策过程（MDP）建立自组织网络中基站动态管理模型时，既要在所得策略的最优性上对比策略迭代与值迭代两种解决方法，同时也要考虑算法的计算时间。面对大规模网络系统，大多数问题希望能使用尽可能简便的算法。但是简化的模型往往由于不能充分描述系统特征而导致得到的策略性能差强人意。例如Simsek等人\cite{Simsek2015} 采用Q学习方法，同时考虑调整基站范围扩张（CRE）偏置与发送功率的分配来控制异构网络中基站间的时域与频域干扰的问题，两个参数同时调整带来了高复杂度，但是也由于模型与实际场景更为贴合而获得更好的性能。
+
 \subsection{鲁棒性}
-鲁棒性指系统中发生差错或突变时，算法的准确与生存能力。在实际通信系统中，类似基站突然关闭等故障问题出现时，算法需要在运行过程中发现并修复问题。这种特性类似于自组织功能中的自修复阶段。具体体现的工作有\cite{Razavi2010}中提出的利用分布式模糊Q学习调整天线下倾角度的自优化方法可在系统环境变化时自动修复，例如当一个基站不能工作时，其他基站将相应调整角度以尽可能弥补损失。\cite{Fan2014}中也考虑了基站状态发生突变时，提出的运用强化学习训练的模糊神经网络算法自优化基站天线下倾角度以及发射功率的分布式方法可以自行修复覆盖空缺，保证整体的覆盖范围与容量性能。
+鲁棒性指在系统中发生差错或突变时，算法仍能维持其原有性能运行。在自组织网络的实际场景中，一些突发事件类似基站突然关闭，用户返回信号有延迟或丢失等故障问题出现时，算法需要具有处理这些故障的能力。另外还需要考虑系统与环境中存在的噪声对算法准确性的影响，因为在大多数场景下，很多因素可能造成用户返回的信息不准确，比如对需要返回的性能指标测量错误等等。对于这种情况，系统需要更长时间的学习和探索来保证最终策略的性能。在实际问题中，需要鲁棒性的例子有自优化阶段根据用户返回的信干噪比等信息调整天线参数保证系统容量与覆盖范围，以及用户在进行切换时的基站选择问题。
+
+具体的工作有Razavi等人\cite{Razavi2010}提出的利用分布式模糊Q学习调整天线下倾角度的自优化方法可在系统环境变化时自动修复，例如当一个基站不能工作时，其他基站将相应调整角度以尽可能弥补损失。Fan等人在\cite{Fan2014} 中也考虑了基站状态发生突变时，提出的运用强化学习训练的模糊神经网络算法自优化基站天线下倾角度以及发射功率的分布式方法可以自行修复覆盖空缺，保证整体的覆盖范围与容量性能。Shen等人在\cite{Shen2016} 中研究的用户与基站的移动性管理问题中，基于对抗性赌博机的模型限制了频繁切换的问题，同时进一步考虑了用户返回的信息有延迟和丢失的情况，以及基站动态开关的情况，并提出了相应的适应算法，充分考虑了实际中可能出现的意外情况。
 
 \subsection{收敛性}
-收敛性是指衡量算法最后确定适合问题的最优策略所需要的时间以及收敛的可靠性。强化学习的过程需要额外的时间，通过与环境的交互最终确定最优的解决策略。收敛性能也经常用作评判强化学习算法的重要性能指标，具体体现为累积遗憾值上界。
+收敛性是指衡量算法最后确定适合问题的最优策略所需要的时间以及收敛的可靠性。强化学习的过程需要额外的时间，通过与环境的交互最终确定最优的解决策略。由于初始化的需要，Q学习方法在状态动作空间较大时需要经历较长的收敛时间，\cite{Simsek2011}中通过在同一状态下更新多个动作的Q函数值的方法提升收敛性能。另外，收敛性还与算法的初始状态有关，一些初始状态有可能造成算法最后收敛到局部最优。一些常见做法可以解决局部最优问题，比如通过随机值来初始化算法来减少对称性从而降低算法收敛到局部最优的可能性，或者结合此种方法，对不同初始情况取平均性能，另外还可以通过调整Q学习中的学习率参数来保证收敛性。
 
-\cite{Wang2017}中利用具有相关性的赌博机算法解决小基站功率自分配问题，算法的性能通过理论的遗憾值上界具体体现。\cite{Shen2016}中提出的移动性管理算法也同样具有理论收敛性分析。\cite{Munoz2013}中利用模糊Q学习方法平衡企业网络中基站负载问题在考虑网络性能长期最优性的同时，保证尽可能短的响应时间。
+自组织网络中的算法收敛性能通常根据仿真性能与理论性能结合分析。仿真中通常利用一些启发式算法所得到的的最优解作为基准进行比较，例如\cite{Razavi2010a}中通过仿真分析其提出的模糊Q学习方法的收敛性能。\cite{Simsek2015a}中同样利用3GPP中定义的移动管理策略作为算法的比较基准。理论上，收敛性能也经常用作评判强化学习算法的重要性能指标，具体体现为赌博机算法中的累积遗憾值上界。\cite{Wang2017} 中利用具有相关性的赌博机算法解决小基站功率自分配问题，算法的性能通过理论的遗憾值上界具体体现。\cite{Shen2016} 中提出的移动性管理算法也同样具有理论收敛性分析。
 
 \section{未来发展方向}
 \label{sec:Conclusion}
