--- a/基于强化学习的无线网络自组织性研究/基于强化学习的无线网络自组织性研究.tex
+++ b/基于强化学习的无线网络自组织性研究/基于强化学习的无线网络自组织性研究.tex
@@ -1,5 +1,5 @@
-﻿\documentclass[11pt,draftclsnofoot,onecolumn,journal,letterpaper]{IEEEtran}
-%\documentclass{IEEEtran}
+﻿%\documentclass[11pt,draftclsnofoot,onecolumn,journal,letterpaper]{IEEEtran}
+\documentclass{IEEEtran}
 
 \usepackage[UTF8]{ctex}
 \begin{document}
@@ -308,6 +308,14 @@ Zoha等人\cite{Zoha2016}将模糊Q学习算法应用于对服务中断的小区
 从自组织网络不同应用方向出发，分析现存的问题，并提出未来解决方法以及相关技术的发展方向。
 
 \section{结论}
+
+本文对目前应用于自组织网络的强化学习技术进行了详细研究，不仅介绍了在自组织应用程序中应用广泛的技术, 而且给出了一些学习算法在蜂窝网络环境的例子。
+
+在此之上, 本文还重点研究了强化学习算法的学习观点及其解决方案。因此, 作者通过将被审查的文献按其强化学习应用和其子函数进行分类, 成功地开发了一个基础, 使其他研究人员能够了解最流行的 ml 算法的基本知识, 以及它们是如何应用在儿子的领地此外, 作者还认为, 这项工作还使未来的研究人员能够发现可能存在的问题, 以及目前在子函数方面没有很好探索的领域。作者还对今后的研究领域提出了一些建议, 并概述了一些可供将来使用的解决方案。
+
+现在有一个趋势, 以使一个完全自主和智能的未来, 不仅在蜂窝系统的领域。智能车辆的来临, 智能的个人助理在手机, 智能搜索算法, 智能建议, 所有这一切将需要在未来的应用模式的转变和改变, 并与蜂窝网络, 它是不一样的。为了使未来的网络保持更新, 并与先进的智能系统看齐, 需要开发范式的变化, 这将很可能需要使用智能解决方案, 主要是 ML 算法。
+
+未来的网络也将需要改变网络的感知方式。在未来, 数以千计的参数将需要配置, 数以千计的细胞将需要监测和优化的同时, 大量的数据将收集, 不仅从人类, 但也从机器。由于人类不可能处理这一数量的任务和数据, 因此需要应用 ML 解决方案, 以便在相对较短的时间内学习模型, 并启用一个自主和智能的网络。
 
 
 \bibliographystyle{IEEEtran}
