1, Complete the Section future work with the drawback of MAB;2, Add the content of MAB in mobility and ICIC ; 3, Add bib item ; 4,  The capital of figure still not show

--- a/基于强化学习的无线网络自组织性研究/SON.bib
+++ b/基于强化学习的无线网络自组织性研究/SON.bib
@@ -870,13 +870,12 @@
 }
 
 @InProceedings{Farooq2015,
-  author        = {Farooq, Hasan and Parwez, Md Salik and Imran, Ali},
-  title         = {Continuous time markov chain based reliability analysis for future cellular networks},
-  booktitle     = {Global Communications Conference (GLOBECOM), 2015 IEEE},
-  year          = {2015},
-  pages         = {1--6},
-  organization  = {IEEE},
-  __markedentry = {[Administrator:]},
+  author       = {Farooq, Hasan and Parwez, Md Salik and Imran, Ali},
+  title        = {Continuous time markov chain based reliability analysis for future cellular networks},
+  booktitle    = {Global Communications Conference (GLOBECOM), 2015 IEEE},
+  year         = {2015},
+  pages        = {1--6},
+  organization = {IEEE},
 }
 
 @Article{Alias2016,
@@ -887,7 +886,7 @@
   volume        = {20},
   number        = {3},
   pages         = {562--565},
-  __markedentry = {[Administrator:6]},
+  __markedentry = {[Administrator:]},
   publisher     = {IEEE},
 }
 
@@ -898,7 +897,7 @@
   year          = {1996},
   volume        = {4},
   pages         = {237--285},
-  __markedentry = {[Administrator:6]},
+  __markedentry = {[Administrator:]},
 }
 
 @Article{Agrawal1988,
@@ -1014,13 +1013,12 @@
 }
 
 @Book{Sutton1998,
-  title         = {Reinforcement learning: An introduction},
-  publisher     = {MIT press Cambridge},
-  year          = {1998},
-  author        = {Sutton, Richard S and Barto, Andrew G},
-  volume        = {1},
-  number        = {1},
-  __markedentry = {[Administrator:]},
+  title     = {Reinforcement learning: An introduction},
+  publisher = {MIT press Cambridge},
+  year      = {1998},
+  author    = {Sutton, Richard S and Barto, Andrew G},
+  volume    = {1},
+  number    = {1},
 }
 
 @Book{Sutton2016,
@@ -1071,6 +1069,15 @@
   day      = {01},
   doi      = {10.1007/s12555-012-0521-3},
   url      = {https://doi.org/10.1007/s12555-012-0521-3},
+}
+
+@InProceedings{Coucheney2015,
+  author        = {Coucheney, Pierre and Khawam, Kinda and Cohen, Johanne},
+  title         = {Multi-Armed Bandit for distributed Inter-Cell Interference Coordination.},
+  booktitle     = {ICC},
+  year          = {2015},
+  pages         = {3323--3328},
+  __markedentry = {[Administrator:6]},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
