Change the pattern of pdf.

--- a/基于强化学习的无线网络自组织性研究/基于强化学习的无线网络自组织性研究.tex
+++ b/基于强化学习的无线网络自组织性研究/基于强化学习的无线网络自组织性研究.tex
@@ -1,5 +1,5 @@
-﻿%\documentclass[11pt,draftclsnofoot,onecolumn,journal,letterpaper]{IEEEtran}
-\documentclass{IEEEtran}
+﻿\documentclass[11pt,draftclsnofoot,onecolumn,journal,letterpaper]{IEEEtran}
+%\documentclass{IEEEtran}
 
 \usepackage[UTF8]{ctex}
 \usepackage{graphicx}
@@ -10,7 +10,7 @@
 \maketitle
 
 \begin{abstract}
-为了全面的了解无线自组织网络(SON)的智能化发展现状，本文以强化学习算法在SON的技术方面的进展为重点，对现有的相关文献进行综合型研究。文章全面展示了自组织技术应用于蜂窝网络的现有文献，并对实现SON具体功能时涉及到的强化学习(RL)算法和技术展开一系列对比研究。文章的工作主要是为读者提供对实现SON相关功能的最新算法的理解和分类。文章将SON 的相关应用分为自配置、自优化、自愈合三大模块，每个模块包含若干种具体实例。此外本文还从算法的可扩展性，复杂度，鲁棒性，收敛性等多重参数标准，对文章中涉及的算法的进行综合对比，对实际不同场景中的适用的算法提出一般性准则。最后，文章总结本文所做工作，阐述了强化学习算法应用于未来网络可能遇到的挑战，并对自组织网络未来发展方向提出指导意见。
+为了全面的了解无线自组织网络(SON)的智能化发展现状，本文以强化学习算法在SON的技术方面的进展为重点，对现有的相关文献进行综合型研究。文章全面展示了自组织技术应用于蜂窝网络的现有文献，并对实现SON具体功能时涉及到的强化学习(RL)算法和技术展开一系列对比研究。文章的工作主要是为读者提供对实现SON相关功能的最新算法的理解和分类。文章将SON 的相关应用分为自配置、自优化、自愈合三大模块，每个模块包含若干种具体实例。此外本文还从算法的可扩展性，复杂度，鲁棒性，收敛性等多重参数标准，对文章中涉及的算法的进行综合对比，对实际不同场景中的适用的算法提出一般性准则。文章最后总结所做工作，阐述了强化学习算法应用于未来网络可能遇到的挑战，并对自组织网络未来发展方向提出指导意见。
 \end{abstract}
 
 \section{引言}
